Update and rename EDA_Project_Agri_ (1).ipynb to Understanding Crop Performance Analysis.ipynb

--- a/Understanding Crop Performance Analysis.ipynb
+++ b/Understanding Crop Performance Analysis.ipynb
@@ -6,7 +6,7 @@
         "id": "rneANshRSe94"
       },
       "source": [
-        "# **Performing Exploratory Data Analysis (EDA) on Agriculture Crop Yield**\n",
+        "# **Performing Exploratory Data Analysis (EDA) for Crop Performance Analysis**\n",
         "\n",
         "\n",
         "\n"
