Update Understanding Crop Performance Analysis.ipynb

--- a/Understanding Crop Performance Analysis.ipynb
+++ b/Understanding Crop Performance Analysis.ipynb
@@ -53,7 +53,7 @@
         "id": "3hZO5NCcSe6w"
       },
       "source": [
-        "## **Purpose of EDA on Agriculture Crop Yield :**\n",
+        "## **Purpose of EDA :**\n",
         "The **purpose of performing EDA** on agricultural crop yield data is to:\n",
         "\n",
         "- **Understand the structure of the data :** Gain an initial understanding of how the data is organized and what variables are present, such as crop type, yield, soil conditions, and environmental factors.\n",
